[gd_scene load_steps=6 format=2]

[ext_resource path="res://gdnative/libopenmpt-godot.gdns" type="Script" id=1]
[ext_resource path="res://main.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.380392, 0.380392, 0.380392, 1 )

[sub_resource type="AudioStreamGenerator" id=1]
buffer_length = 0.1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.662745, 0.027451, 1 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="file" type="FileDialog" parent="."]
margin_left = 7.0
margin_top = 26.0
margin_right = 367.0
margin_bottom = 160.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
show_hidden_files = true

[node name="patternscroller" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 2 )

[node name="container" type="HBoxContainer" parent="patternscroller"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="module" type="Node2D" parent="."]
script = ExtResource( 1 )
module_file_path = "res://song.it"

[node name="generator_player" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="playback_controls" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.517647 )
margin_right = 234.0
margin_bottom = 159.0

[node name="container" type="VBoxContainer" parent="playback_controls"]
margin_left = 7.0
margin_top = 7.0
margin_right = 227.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="volume" type="ProgressBar" parent="playback_controls/container"]
margin_right = 220.0
margin_bottom = 1.0
custom_styles/fg = SubResource( 3 )
percent_visible = false

[node name="info" type="Label" parent="playback_controls/container"]
margin_top = 5.0
margin_right = 220.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="file" type="Label" parent="playback_controls/container"]
margin_top = 24.0
margin_right = 220.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.054902, 1, 0, 1 )
text = "file:"

[node name="container" type="HBoxContainer" parent="playback_controls/container"]
margin_top = 43.0
margin_right = 220.0
margin_bottom = 68.0

[node name="file_name" type="LineEdit" parent="playback_controls/container/container"]
margin_right = 176.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="load_button" type="Button" parent="playback_controls/container/container"]
margin_left = 180.0
margin_right = 220.0
margin_bottom = 25.0
text = "Load"

[node name="playing" type="CheckButton" parent="playback_controls/container"]
margin_top = 72.0
margin_right = 220.0
margin_bottom = 112.0
text = "Playing"

[node name="set_spped_label" type="Label" parent="playback_controls/container"]
margin_top = 116.0
margin_right = 220.0
margin_bottom = 131.0
custom_colors/font_color = Color( 0.0823529, 1, 0.572549, 1 )
text = "Set Speed:"

[node name="set_speed" type="HSlider" parent="playback_controls/container"]
margin_top = 135.0
margin_right = 220.0
margin_bottom = 151.0
min_value = 0.01
max_value = 2.0
step = 0.01
value = 1.0

[node name="set_seek_label" type="Label" parent="playback_controls/container"]
margin_top = 155.0
margin_right = 220.0
margin_bottom = 170.0
custom_colors/font_color = Color( 0.0823529, 1, 0.572549, 1 )
text = "Seek:"

[node name="set_seek" type="HSlider" parent="playback_controls/container"]
margin_top = 174.0
margin_right = 220.0
margin_bottom = 190.0
step = 0.1
value = 1.0

[node name="metadata" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.552941 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -314.0
margin_top = -505.0

[node name="container" type="VBoxContainer" parent="metadata"]
margin_left = 7.0
margin_top = 7.0
margin_right = 307.0
margin_bottom = 498.0

[node name="type_label" type="Label" parent="metadata/container"]
margin_right = 300.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.631373, 0.827451, 1, 1 )
text = "type:"

[node name="type" type="Label" parent="metadata/container"]
margin_top = 19.0
margin_right = 300.0
margin_bottom = 34.0

[node name="originaltype_label" type="Label" parent="metadata/container"]
margin_top = 38.0
margin_right = 300.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0.631373, 0.827451, 1, 1 )
text = "original type:"

[node name="originaltype" type="Label" parent="metadata/container"]
margin_top = 57.0
margin_right = 300.0
margin_bottom = 72.0

[node name="container_label" type="Label" parent="metadata/container"]
margin_top = 76.0
margin_right = 300.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0.631373, 0.827451, 1, 1 )
text = "container:"

[node name="container" type="Label" parent="metadata/container"]
margin_top = 95.0
margin_right = 300.0
margin_bottom = 110.0

[node name="tracker_label" type="Label" parent="metadata/container"]
margin_top = 114.0
margin_right = 300.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.631373, 0.827451, 1, 1 )
text = "tracker:"

[node name="tracker" type="Label" parent="metadata/container"]
margin_top = 133.0
margin_right = 300.0
margin_bottom = 148.0

[node name="artist_label" type="Label" parent="metadata/container"]
margin_top = 152.0
margin_right = 300.0
margin_bottom = 167.0
custom_colors/font_color = Color( 0.631373, 0.827451, 1, 1 )
text = "artist:"

[node name="artist" type="Label" parent="metadata/container"]
margin_top = 171.0
margin_right = 300.0
margin_bottom = 186.0

[node name="title_label" type="Label" parent="metadata/container"]
margin_top = 190.0
margin_right = 300.0
margin_bottom = 205.0
custom_colors/font_color = Color( 0.631373, 0.827451, 1, 1 )
text = "title:"

[node name="title" type="Label" parent="metadata/container"]
margin_top = 209.0
margin_right = 300.0
margin_bottom = 224.0

[node name="date_label" type="Label" parent="metadata/container"]
margin_top = 228.0
margin_right = 300.0
margin_bottom = 243.0
custom_colors/font_color = Color( 0.631373, 0.827451, 1, 1 )
text = "date:"

[node name="date" type="Label" parent="metadata/container"]
margin_top = 247.0
margin_right = 300.0
margin_bottom = 262.0

[node name="message_label" type="Label" parent="metadata/container"]
margin_top = 266.0
margin_right = 300.0
margin_bottom = 281.0
custom_colors/font_color = Color( 0.631373, 0.827451, 1, 1 )
text = "message:"

[node name="message" type="TextEdit" parent="metadata/container"]
margin_top = 285.0
margin_right = 300.0
margin_bottom = 385.0
rect_min_size = Vector2( 300, 100 )
readonly = true

[node name="warnings_label" type="Label" parent="metadata/container"]
margin_top = 389.0
margin_right = 300.0
margin_bottom = 404.0
custom_colors/font_color = Color( 0.631373, 0.827451, 1, 1 )
text = "warnings:"

[node name="warnings" type="Label" parent="metadata/container"]
margin_top = 408.0
margin_right = 300.0
margin_bottom = 423.0

[node name="show_controls" type="CheckButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 171.0
pressed = true
text = "Show Controls"

[connection signal="pressed" from="playback_controls/container/container/load_button" to="." method="_on_load_button_pressed"]
[connection signal="toggled" from="playback_controls/container/playing" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="playback_controls/container/set_speed" to="." method="_on_HSlider_value_changed"]
[connection signal="drag_ended" from="playback_controls/container/set_seek" to="." method="_on_HSlider2_drag_ended"]
[connection signal="drag_started" from="playback_controls/container/set_seek" to="." method="_on_HSlider2_drag_started"]
[connection signal="gui_input" from="playback_controls/container/set_seek" to="." method="_on_set_seek_gui_input"]
[connection signal="toggled" from="show_controls" to="." method="_on_show_controls_toggled"]
